--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/vow": "^1.0.17",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "@adonisjs/vow": "^1.0.17",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "commitizen": "^4.0.4",
